# gabai

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.antigravitycli/: 8b069ff3-2a2f-4dbb-8383-8b8fb49cf886.json
.github/workflows/: ci.yml
.husky/: pre-push
apps/gabai/nest/: Dockerfile  jest.config.cts  package.json  tsconfig.app.json  webpack.config.js
apps/gabai/sidecar/: project.json  pyproject.toml
apps/gabai/sidecar/src/sidecar/: exceptions.py  features.py  formulas.py  main.py  models.py  train_utils.py
apps/gabai/web/: Dockerfile  eslint.config.mjs  jest.config.cts  next.config.js  package.json  project.json  tsconfig.json
apps/gavai/nest/: Dockerfile  (+3 more)
docs/: 01-architecture.md  02-database.md  03-auth.md  04-data-pipeline.md  05-avm-engine.md  06-api-design.md  07-frontend.md  08-area-intelligence.md  09-bir-zonal.md  10-infrastructure.md  10-spider-chart.md  11-build-plan.md  11-deployment.md  INDEX.md  design-system.md
infra/hackathon/: main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf
libs/pipeline/: README.md  jest.config.cts  package.json  project.json
libs/platform/: jest.config.cts  package.json  prisma.config.ts  project.json
models/: .gitignore
scripts/: bir_zonal_pipeline.py  browser-check.cjs  dev.cjs  e2e-simulation.cjs  parse-bir-zonal.ts  reseed-admin.cjs  seed-metro-cebu.ts  seed-metro-manila.ts  seed-zonal-values.ts  train.py
(+262 files in other folders)
