[project]
name = "sidecar"
version = "1.0.0"
description = "GABAI ML inference sidecar"
requires-python = ">=3.12,<4"
readme = 'README.md'
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "ruff>=0.8.2",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../coverage/sidecar/html'
 --cov-report xml:'../coverage/sidecar/coverage.xml'
 --html='../reports/sidecar/unittests/html/index.html'
 --junitxml='../reports/sidecar/unittests/junit.xml'
"""

[tool.ruff]
exclude = [
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "dist",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
